# opengl

include/glad/: glad.h
resources/models/: samplemodel.json
src/: CMakeCache.txt  CMakeLists.txt  Controller.cc  Controller.h  Makefile  cmake_install.cmake  glad.c  render.cc  test.cc
src/clipper/: CMakeLists.txt
src/gfx/: CMakeLists.txt  Camera.cc  Camera.h  Character.h  DefaultModel.cc  DefaultModel.cc~  DefaultModel.h  FontManager.cc  FontManager.h  JSONModel.cc  JSONModel.h  Light.h  Menu.cc  Menu.h  Mesh.cc  Mesh.h  Model.cc  Model.h  Script.h  Shader.cc  Shader.h  Texture.h  Vertex.h  WindowManager.cc  WindowManager.h
src/scripting/: CMakeLists.txt  ScriptHost.cc  ScriptHost.h
src/scripting/squall/: squall_vmstd.hpp
src/sfx/: CMakeLists.txt  SoundManager.cc  SoundManager.h
